Add page and css

--- a/app.json
+++ b/app.json
@@ -1,5 +1,19 @@
 {
   "name": "test-multi-version",
   "type": "app",
-  "defaultPage": "home"
+  "defaultPage": "home",
+  "config": {
+    "config": {
+      "parameters": [],
+      "script": ""
+    },
+    "modules": [],
+    "properties": {},
+    "themes": [],
+    "auth": {
+      "enabled": false,
+      "mockedUserAccounts": []
+    },
+    "environments": []
+  }
 }
